# BE

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dummy.json  initial_data.py  job_dummy.json  program_dummy.json  pyproject.toml  test_ai.py  user_dummy.json
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  analysis.py  auth.py  interview.py  jobs.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  job.py  project.py  user.py
app/schemas/: __init__.py  analysis.py  interview.py  job.py  project.py  user.py
app/services/: __init__.py  llm_service.py  tts_service.py
app/utils/: __init__.py  ai_analysis.py
dummy_data/: job_dummy.json  project_dummy.json
